--- a/pacdudegames.com_spacehey_windows_xp.css
+++ b/pacdudegames.com_spacehey_windows_xp.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	background-image: url('https://s3.amazonaws.com//depot.pacdudegames.com/spacehey/bliss.jpg');
+	background-image: url('https://suruide.github.io/b12c5864131c6a05c3d8decd0988659b0e011cf1.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
