--- a/pacdudegames.com_spacehey_windows_xp.css
+++ b/pacdudegames.com_spacehey_windows_xp.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	background-image: url('https://suruide.github.io/bliss.jpg');
+	background-image: url('https://i.imgur.com/GDF8g5o.jpg');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
