--- a/xp_dark.css
+++ b/xp_dark.css
@@ -32,51 +32,34 @@ nav, footer {
 }
 footer{
 	margin-bottom:3rem;
-	border:2px solid #1D43D1;
+	border:2px solid #383838;
 }
-nav .top, nav .links {
-	border-left: 2px solid #1D43D1;
-	border-right: 2px solid #1D43D1;
+nav .top{
+	background: #4F4F4F;
+	border-left: 2px solid #383838;
+	border-right: 2px solid #383838;
+}
+nav .links{
+	background: #9A9A9A;
+	border-left: 2px solid #383838;
+	border-right: 2px solid #383838;
 }
 nav .info{
-	border-left: 2px solid #1D43D1;
-	border-right: 2px solid #1D43D1;
+	border-left: 2px solid #383838;
+	border-right: 2px solid #383838;
 }
 nav .links {
-	border-bottom: 2px solid #1D43D1;
+	border-bottom: 2px solid #383838;
 }
 nav:before {
-	content: "SpaceHey Header";
+	content: "SpaceHey Navigation";
 	display: block;
 	padding: 1em;
-	background: linear-gradient(to bottom, #245edb 0%, #3f8cf3 9%, #245edb 18%, #245edb 92%, #333 100%) center/cover no-repeat;
+	background: linear-gradient(to bottom, rgba(70,70,70,1) 3%, rgba(105,105,105,1) 10%, rgba(56,56,56,1) 17%, rgba(56,56,56,1) 27%, rgba(66,66,66,1) 89%, rgba(35,35,35,1) 100%) center/cover no-repeat;
 	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 	font-size: 1em;
-	text-shadow: 2px 2px 0px #000;
+	text-shadow: 1px 1px 0px #000;
 	border-radius: 10px 10px 0 0;
-}
-nav:after {
-	content: "X";
-	display: inline-block;
-	padding: .4em .6em;
-	width: fit-content;
-	border-radius: 5px;
-	background: linear-gradient(180deg, rgba(233,145,126,1) 0%, rgba(223,89,65,1) 29%, rgba(156,32,15,1) 100%);
-	border: 1px solid #FFF;
-	position: absolute;
-	top: 0;
-	right: 0;
-	margin-top: .5em;
-	margin-right: .5em;
-	pointer-events: none;
-}
-main:before {
-	content: url('https://media.giphy.com/media/w3AmrG1E1vr56/giphy.gif');
-	position: fixed;
-	bottom: 0;
-	right: 0;
-	transform: translateX(-3vw) translateY(-6vh);
-	pointer-events: none;
 }
 main {
 	background: none;
@@ -84,7 +67,7 @@ main {
 	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 }
 .profile h1 {
-	border: 2px solid #1B44B8;
+	border: 2px solid #383838;
 	border-radius: 5px 5px 0 0;
 	padding: .5em;
 	color: #FFF;
@@ -99,9 +82,9 @@ main {
 }
 .profile .general-about {
 	background: #FFF;
-	border-left: 2px solid #1B44B8;
-	border-right: 2px solid #1B44B8;
-	border-bottom: 2px solid #1B44B8;
+	border-left: 2px solid #383838;
+	border-right: 2px solid #383838;
+	border-bottom: 2px solid #383838;
 	padding: 1em;
 	box-shadow: 5px 8px 10px #0006;
 }
@@ -113,9 +96,9 @@ main {
 	background: #FFF;
 	border-radius: 11px 11px 0 0;
 	box-shadow: 5px 8px 10px #0006;
-	border-left: 2px solid #1B44B8;
-	border-right: 2px solid #1B44B8;
-	border-bottom: 2px solid #1B44B8;
+	border-left: 2px solid #383838;
+	border-right: 2px solid #383838;
+	border-bottom: 2px solid #383838;
 }
 .profile .left .mood p {
 	margin-left: 1em;
@@ -128,27 +111,16 @@ main {
 	content: "🙂 Mood";
 	display: block;
 	padding: .5em;
-	border: 2px solid #1B44B8;
+	border: 0px solid #383838;
+	border-left: 2px solid #383838;
+	border-right: 2px solid #383838;
+	border-top: 2px solid #383838;
 	background: var(--blue-gradient);
 	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 	font-size: 1em;
-	text-shadow: 2px 2px 0px #000;
+	text-shadow: 1px 1px 0px #000;
 	border-radius: 10px 10px 0 0;
 	color: #FFF;
-}
-nav:after {
-	content: "X";
-	display: inline-block;
-	padding: .4em .6em;
-	width: fit-content;
-	border-radius: 5px;
-	background: linear-gradient(180deg, rgba(233,145,126,1) 0%, rgba(223,89,65,1) 29%, rgba(156,32,15,1) 100%);
-	border: 1px solid #FFF;
-	position: absolute;
-	top: 0;
-	right: 0;
-	margin-top: .5em;
-	margin-right: .5em;
 }
 .left .contact {
 	position: fixed;
@@ -161,7 +133,7 @@ nav:after {
 }
 .left .contact {
 	border: 0;
-	background: linear-gradient(180deg, #0997ff, #0053ee 8%, #0050ee 40%, #06f 88%, #06f 93%, #005bff 95%, #003dd7 96%, #003dd7);
+	background: var(--blue-gradient);
 }
 .profile .contact .heading {
 	background: radial-gradient(circle, #5eac56 0%, #3c873c 100%) center/cover no-repeat;
@@ -218,7 +190,7 @@ nav:after {
 }
 .left .table-section {
 	border-radius: 10px 10px 0 0;
-	border: 2px solid #1B44B8;
+	border: 2px solid #383838;
 	box-shadow: 5px 8px 10px #0006;
 }
 .left .table-section .details-table tr {
@@ -233,7 +205,7 @@ nav:after {
 	background: var(--blue-gradient);
 	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 	font-size: 1em;
-	text-shadow: 2px 2px 0px #000;
+	text-shadow: 1px 1px 0px #000;
 	border-radius: 10px 10px 0 0;
 	color: #FFF;
 }
@@ -277,9 +249,9 @@ nav:after {
 	background: #FFF;
 	border-radius: 11px 11px 0 0;
 	box-shadow: 5px 8px 10px #0006;
-	border-left: 3px solid #1B44B8;
-	border-right: 2px solid #1B44B8;
-	border-bottom: 2px solid #1B44B8;
+	border-left: 3px solid #383838;
+	border-right: 2px solid #383838;
+	border-bottom: 2px solid #383838;
 }
 .profile .right .blog-preview p, .profile .right .blog-preview h4 {
 	font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace;
@@ -293,11 +265,11 @@ nav:after {
 	content: "📝 Notepad";
 	display: block;
 	padding: .5em;
-	border: 2px solid #1B44B8;
+	border: 2px solid #383838;
 	background: var(--blue-gradient);
 	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 	font-size: 1em;
-	text-shadow: 2px 2px 0px #000;
+	text-shadow: 1px 1px 0px #000;
 	border-radius: 10px 10px 0 0;
 	color: #FFF;
 }
@@ -306,9 +278,9 @@ nav:after {
 	background: #FFF;
 	border-radius: 11px 11px 0 0;
 	box-shadow: 5px 8px 10px #0006;
-	border-left: 3px solid #1B44B8;
-	border-right: 2px solid #1B44B8;
-	border-bottom: 2px solid #1B44B8;
+	border-left: 3px solid #383838;
+	border-right: 2px solid #383838;
+	border-bottom: 2px solid #383838;
 }
 .profile .right .blurbs .heading, .profile .right .friends .heading{
 	-moz-background-attachment-clip: padding;
@@ -316,11 +288,11 @@ nav:after {
 	background-clip: padding-box;
 	display: block;
 	padding: .7em;
-	border: 2px solid #1B44B8;
+	border: 2px solid #383838;
 	background: var(--blue-gradient);
 	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 	font-size: 1em;
-	text-shadow: 2px 2px 0px #000;
+	text-shadow: 1px 1px 0px #000;
 	border-radius: 10px 10px 0 0;
 	color: #FFF;
 }
