--- a/xp_dark2.css
+++ b/xp_dark2.css
@@ -139,13 +139,9 @@ main {
 	background: var(--blue-gradient);
 }
 .profile .contact .heading {
-	background: radial-gradient(circle, #5eac56 0%, #3c873c 100%) center/cover no-repeat;
+	background-image: url('https://suruide.github.io/startbetter.png')
 	display: flex;
-	border-radius: 0 40px 50px 0;
 	align-items: center;
-	-webkit-filter: drop-shadow(0px 0px 7px #000);
-	box-shadow: -2px -2px 10px rgba(0,0,0,.25) inset, 2px 2px 10px rgba(0,0,0,0.5) inset;
-	margin-right: .5em;
 }
 .profile .contact .heading h4 {
 	font-size: 0;
