Update and rename xp_dark6.css to xp_dark7.css

--- a/xp_dark7.css
+++ b/xp_dark7.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	background-image: url('https://files.catbox.moe/pteov9.png');
+	background-image: url('https://suruide.github.io/media/shbg.png');
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
